# companion-client

./: README.md  pyproject.toml
companion_client/: chat_client.py  client.py
companion_client/model/: base.py  chat.py  chat_messages.py  course_structure.py  enum.py  group.py  material.py  query.py  schema.py  similarity_search.py
companion_client/test/: client.py
