[project]
name = "companion-client"
version = "0.1.0"
description = "Client for the Learning Companion API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "httpx-ws>=0.7.1",
    "pendulum>=3.0.0",
    "pydantic>=2.10.4",
    "pydantic-extra-types>=2.10.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.1",
    "ruff>=0.8.6",
]
